# terminal-OS

./: .gitignore  CMakeLists.txt  README.md  application.hpp  bidirectional_list.hpp  bordered_window.cpp  bordered_window.hpp  coordinates.hpp  icon.cpp  icon.hpp  image.cpp  image.hpp  main.cpp  mouse_event.cpp  mouse_event.hpp  operating_system.cpp  operating_system.hpp  paint.cpp  paint.hpp  rect.cpp  size.cpp  size.hpp  taskbar.cpp  taskbar.hpp  terminal.cpp  terminal.hpp  window.cpp  window.hpp
applications/: application.hpp  paint.cpp  paint.hpp  terminal.cpp  terminal.hpp
operating_system/: bordered_window.cpp  bordered_window.hpp  file_system.cpp  file_system.hpp  icon.cpp  icon.hpp  operating_system.cpp  operating_system.hpp  special_key.hpp  taskbar.hpp  window.cpp  window.hpp
util/: bidirectional_list.hpp  bordered_window.hpp  colorful_print.hpp  coordinates.cpp  mouse_event.cpp  mouse_event.hpp  pixel.hpp  rect.hpp  size.cpp
